// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecl-list-illustration renders 1`] = `
<ecl-list-illustration color-mode="blue" column="1" font-size="m" zebra="true">
  <!---->
  <div class="ecl-color-mode--blue ecl-list-illustration ecl-list-illustration--col-1 ecl-list-illustration--font-m ecl-list-illustration--zebra" role="list">
    <ecl-list-illustration-item class="ecl-list-illustration__item sc-ecl-list-illustration-ec" image="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg" item-title="List with illustration item 1" role="listitem">
      <!---->
      <div class="ecl-list-illustration__item-content ecl-list-illustration__item-content--row sc-ecl-list-illustration-ec">
        <ecl-picture role="img">
          <!---->
          <picture class="ecl-list-illustration__picture ecl-picture sc-ecl-list-illustration-ec">
            <img class="ecl-list-illustration__image sc-ecl-list-illustration-ec" src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg">
          </picture>
        </ecl-picture>
        <div class="ecl-list-illustration__detail sc-ecl-list-illustration-ec">
          <div class="ecl-list-illustration__title-container sc-ecl-list-illustration-ec">
            <div class="ecl-list-illustration__title sc-ecl-list-illustration-ec">
              List with illustration item 1
            </div>
          </div>
          <div class="ecl-list-illustration__description sc-ecl-list-illustration-ec">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
          </div>
        </div>
      </div>
    </ecl-list-illustration-item>
    <ecl-list-illustration-item class="ecl-list-illustration__item sc-ecl-list-illustration-ec" image="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg" item-title="List with illustration item 2" role="listitem">
      <!---->
      <div class="ecl-list-illustration__item-content ecl-list-illustration__item-content--row sc-ecl-list-illustration-ec">
        <ecl-picture role="img">
          <!---->
          <picture class="ecl-list-illustration__picture ecl-picture sc-ecl-list-illustration-ec">
            <img class="ecl-list-illustration__image sc-ecl-list-illustration-ec" src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg">
          </picture>
        </ecl-picture>
        <div class="ecl-list-illustration__detail sc-ecl-list-illustration-ec">
          <div class="ecl-list-illustration__title-container sc-ecl-list-illustration-ec">
            <div class="ecl-list-illustration__title sc-ecl-list-illustration-ec">
              List with illustration item 2
            </div>
          </div>
          <div class="ecl-list-illustration__description sc-ecl-list-illustration-ec">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
          </div>
        </div>
      </div>
    </ecl-list-illustration-item>
    <ecl-list-illustration-item class="ecl-list-illustration__item sc-ecl-list-illustration-ec" image="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg" item-title="List with illustration item 3" role="listitem">
      <!---->
      <div class="ecl-list-illustration__item-content ecl-list-illustration__item-content--row sc-ecl-list-illustration-ec">
        <ecl-picture role="img">
          <!---->
          <picture class="ecl-list-illustration__picture ecl-picture sc-ecl-list-illustration-ec">
            <img class="ecl-list-illustration__image sc-ecl-list-illustration-ec" src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg">
          </picture>
        </ecl-picture>
        <div class="ecl-list-illustration__detail sc-ecl-list-illustration-ec">
          <div class="ecl-list-illustration__title-container sc-ecl-list-illustration-ec">
            <div class="ecl-list-illustration__title sc-ecl-list-illustration-ec">
              List with illustration item 3
            </div>
          </div>
          <div class="ecl-list-illustration__description sc-ecl-list-illustration-ec">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
          </div>
        </div>
      </div>
    </ecl-list-illustration-item>
    <ecl-list-illustration-item class="ecl-list-illustration__item sc-ecl-list-illustration-ec" image="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg" item-title="List with illustration item 4" role="listitem">
      <!---->
      <div class="ecl-list-illustration__item-content ecl-list-illustration__item-content--row sc-ecl-list-illustration-ec">
        <ecl-picture role="img">
          <!---->
          <picture class="ecl-list-illustration__picture ecl-picture sc-ecl-list-illustration-ec">
            <img class="ecl-list-illustration__image sc-ecl-list-illustration-ec" src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg">
          </picture>
        </ecl-picture>
        <div class="ecl-list-illustration__detail sc-ecl-list-illustration-ec">
          <div class="ecl-list-illustration__title-container sc-ecl-list-illustration-ec">
            <div class="ecl-list-illustration__title sc-ecl-list-illustration-ec">
              List with illustration item 4
            </div>
          </div>
          <div class="ecl-list-illustration__description sc-ecl-list-illustration-ec">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
          </div>
        </div>
      </div>
    </ecl-list-illustration-item>
    <ecl-list-illustration-item class="ecl-list-illustration__item sc-ecl-list-illustration-ec" image="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg" item-title="List with illustration item 5" role="listitem">
      <!---->
      <div class="ecl-list-illustration__item-content ecl-list-illustration__item-content--row sc-ecl-list-illustration-ec">
        <ecl-picture role="img">
          <!---->
          <picture class="ecl-list-illustration__picture ecl-picture sc-ecl-list-illustration-ec">
            <img class="ecl-list-illustration__image sc-ecl-list-illustration-ec" src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg">
          </picture>
        </ecl-picture>
        <div class="ecl-list-illustration__detail sc-ecl-list-illustration-ec">
          <div class="ecl-list-illustration__title-container sc-ecl-list-illustration-ec">
            <div class="ecl-list-illustration__title sc-ecl-list-illustration-ec">
              List with illustration item 5
            </div>
          </div>
          <div class="ecl-list-illustration__description sc-ecl-list-illustration-ec">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
          </div>
        </div>
      </div>
    </ecl-list-illustration-item>
  </div>
</ecl-list-illustration>
`;

exports[`ecl-list-illustration renders correctly as a number list 1`] = `
<ecl-list-illustration color-mode="blue" column="2" number-list="">
  <!---->
  <div class="ecl-color-mode--blue ecl-list-illustration ecl-list-illustration--col-2 ecl-list-illustration--font-l ecl-list-illustration--number-list ecl-list-illustration--number-list-reset" role="list" style="--ecl-list-illustration-counter-start: 0;">
    <ecl-list-illustration-item class="ecl-list-illustration__item sc-ecl-list-illustration-ec" item-title="List with illustration item 1" role="listitem">
      <!---->
      <div class="ecl-list-illustration__item-content sc-ecl-list-illustration-ec">
        <div class="ecl-list-illustration__detail sc-ecl-list-illustration-ec">
          <div class="ecl-list-illustration__title-container sc-ecl-list-illustration-ec">
            <div class="ecl-list-illustration__title sc-ecl-list-illustration-ec">
              List with illustration item 1
            </div>
          </div>
          <div class="ecl-list-illustration__description sc-ecl-list-illustration-ec">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
          </div>
        </div>
      </div>
    </ecl-list-illustration-item>
    <ecl-list-illustration-item class="ecl-list-illustration__item sc-ecl-list-illustration-ec" item-title="List with illustration item 2" role="listitem">
      <!---->
      <div class="ecl-list-illustration__item-content sc-ecl-list-illustration-ec">
        <div class="ecl-list-illustration__detail sc-ecl-list-illustration-ec">
          <div class="ecl-list-illustration__title-container sc-ecl-list-illustration-ec">
            <div class="ecl-list-illustration__title sc-ecl-list-illustration-ec">
              List with illustration item 2
            </div>
          </div>
          <div class="ecl-list-illustration__description sc-ecl-list-illustration-ec">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
          </div>
        </div>
      </div>
    </ecl-list-illustration-item>
  </div>
</ecl-list-illustration>
`;

exports[`ecl-list-illustration renders correctly as an icon list 1`] = `
<ecl-list-illustration color-mode="blue" column="2" icon-list="">
  <!---->
  <div class="ecl-color-mode--blue ecl-list-illustration ecl-list-illustration--col-2 ecl-list-illustration--font-l ecl-list-illustration--icon-list" role="list">
    <ecl-list-illustration-item class="ecl-list-illustration__item sc-ecl-list-illustration-ec" icon="check-bold" item-title="List with illustration item 1" role="listitem">
      <!---->
      <div class="ecl-list-illustration__item-content sc-ecl-list-illustration-ec">
        <ecl-icon style-class="ecl-list-illustration__icon sc-ecl-list-illustration-ec">
          <span class="ecl-icon ecl-icon--2xl ecl-list-illustration__icon sc-ecl-list-illustration-ec wt-icon--check-bold wt-icon--placeholder"></span>
        </ecl-icon>
        <div class="ecl-list-illustration__detail sc-ecl-list-illustration-ec">
          <div class="ecl-list-illustration__title-container sc-ecl-list-illustration-ec">
            <div class="ecl-list-illustration__title sc-ecl-list-illustration-ec">
              List with illustration item 1
            </div>
          </div>
          <div class="ecl-list-illustration__description sc-ecl-list-illustration-ec">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
          </div>
        </div>
      </div>
    </ecl-list-illustration-item>
    <ecl-list-illustration-item class="ecl-list-illustration__item sc-ecl-list-illustration-ec" icon="check-bold" item-title="List with illustration item 2" role="listitem">
      <!---->
      <div class="ecl-list-illustration__item-content sc-ecl-list-illustration-ec">
        <ecl-icon style-class="ecl-list-illustration__icon sc-ecl-list-illustration-ec">
          <span class="ecl-icon ecl-icon--2xl ecl-list-illustration__icon sc-ecl-list-illustration-ec wt-icon--check-bold wt-icon--placeholder"></span>
        </ecl-icon>
        <div class="ecl-list-illustration__detail sc-ecl-list-illustration-ec">
          <div class="ecl-list-illustration__title-container sc-ecl-list-illustration-ec">
            <div class="ecl-list-illustration__title sc-ecl-list-illustration-ec">
              List with illustration item 2
            </div>
          </div>
          <div class="ecl-list-illustration__description sc-ecl-list-illustration-ec">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
          </div>
        </div>
      </div>
    </ecl-list-illustration-item>
  </div>
</ecl-list-illustration>
`;

exports[`ecl-list-illustration renders correctly with an icon 1`] = `
<ecl-list-illustration color-mode="blue" column="1" font-size="m">
  <!---->
  <div class="ecl-color-mode--blue ecl-list-illustration ecl-list-illustration--col-1 ecl-list-illustration--font-m" role="list">
    <ecl-list-illustration-item class="ecl-list-illustration__item sc-ecl-list-illustration-ec" icon="regulation" item-title="List with illustration item 1" role="listitem">
      <!---->
      <div class="ecl-list-illustration__item-content sc-ecl-list-illustration-ec">
        <ecl-icon style-class="ecl-list-illustration__icon sc-ecl-list-illustration-ec">
          <span class="ecl-icon ecl-icon--2xl ecl-list-illustration__icon sc-ecl-list-illustration-ec wt-icon--placeholder wt-icon--regulation"></span>
        </ecl-icon>
        <div class="ecl-list-illustration__detail sc-ecl-list-illustration-ec">
          <div class="ecl-list-illustration__title-container sc-ecl-list-illustration-ec">
            <div class="ecl-list-illustration__title sc-ecl-list-illustration-ec">
              List with illustration item 1
            </div>
          </div>
          <div class="ecl-list-illustration__description sc-ecl-list-illustration-ec">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
          </div>
        </div>
      </div>
    </ecl-list-illustration-item>
    <ecl-list-illustration-item class="ecl-list-illustration__item sc-ecl-list-illustration-ec" icon="regulation" item-title="List with illustration item 2" role="listitem">
      <!---->
      <div class="ecl-list-illustration__item-content sc-ecl-list-illustration-ec">
        <ecl-icon style-class="ecl-list-illustration__icon sc-ecl-list-illustration-ec">
          <span class="ecl-icon ecl-icon--2xl ecl-list-illustration__icon sc-ecl-list-illustration-ec wt-icon--placeholder wt-icon--regulation"></span>
        </ecl-icon>
        <div class="ecl-list-illustration__detail sc-ecl-list-illustration-ec">
          <div class="ecl-list-illustration__title-container sc-ecl-list-illustration-ec">
            <div class="ecl-list-illustration__title sc-ecl-list-illustration-ec">
              List with illustration item 2
            </div>
          </div>
          <div class="ecl-list-illustration__description sc-ecl-list-illustration-ec">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
          </div>
        </div>
      </div>
    </ecl-list-illustration-item>
    <ecl-list-illustration-item class="ecl-list-illustration__item sc-ecl-list-illustration-ec" icon="regulation" item-title="List with illustration item 3" role="listitem">
      <!---->
      <div class="ecl-list-illustration__item-content sc-ecl-list-illustration-ec">
        <ecl-icon style-class="ecl-list-illustration__icon sc-ecl-list-illustration-ec">
          <span class="ecl-icon ecl-icon--2xl ecl-list-illustration__icon sc-ecl-list-illustration-ec wt-icon--placeholder wt-icon--regulation"></span>
        </ecl-icon>
        <div class="ecl-list-illustration__detail sc-ecl-list-illustration-ec">
          <div class="ecl-list-illustration__title-container sc-ecl-list-illustration-ec">
            <div class="ecl-list-illustration__title sc-ecl-list-illustration-ec">
              List with illustration item 3
            </div>
          </div>
          <div class="ecl-list-illustration__description sc-ecl-list-illustration-ec">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
          </div>
        </div>
      </div>
    </ecl-list-illustration-item>
    <ecl-list-illustration-item class="ecl-list-illustration__item sc-ecl-list-illustration-ec" icon="regulation" item-title="List with illustration item 4" role="listitem">
      <!---->
      <div class="ecl-list-illustration__item-content sc-ecl-list-illustration-ec">
        <ecl-icon style-class="ecl-list-illustration__icon sc-ecl-list-illustration-ec">
          <span class="ecl-icon ecl-icon--2xl ecl-list-illustration__icon sc-ecl-list-illustration-ec wt-icon--placeholder wt-icon--regulation"></span>
        </ecl-icon>
        <div class="ecl-list-illustration__detail sc-ecl-list-illustration-ec">
          <div class="ecl-list-illustration__title-container sc-ecl-list-illustration-ec">
            <div class="ecl-list-illustration__title sc-ecl-list-illustration-ec">
              List with illustration item 4
            </div>
          </div>
          <div class="ecl-list-illustration__description sc-ecl-list-illustration-ec">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
          </div>
        </div>
      </div>
    </ecl-list-illustration-item>
    <ecl-list-illustration-item class="ecl-list-illustration__item sc-ecl-list-illustration-ec" icon="regulation" item-title="List with illustration item 5" role="listitem">
      <!---->
      <div class="ecl-list-illustration__item-content sc-ecl-list-illustration-ec">
        <ecl-icon style-class="ecl-list-illustration__icon sc-ecl-list-illustration-ec">
          <span class="ecl-icon ecl-icon--2xl ecl-list-illustration__icon sc-ecl-list-illustration-ec wt-icon--placeholder wt-icon--regulation"></span>
        </ecl-icon>
        <div class="ecl-list-illustration__detail sc-ecl-list-illustration-ec">
          <div class="ecl-list-illustration__title-container sc-ecl-list-illustration-ec">
            <div class="ecl-list-illustration__title sc-ecl-list-illustration-ec">
              List with illustration item 5
            </div>
          </div>
          <div class="ecl-list-illustration__description sc-ecl-list-illustration-ec">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
          </div>
        </div>
      </div>
    </ecl-list-illustration-item>
  </div>
</ecl-list-illustration>
`;
